--- a/portfolio.html
+++ b/portfolio.html
@@ -3,31 +3,19 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Homepage</title>
+  <title>My portfolio</title>
 </head>
 <body>
 
+<div class="nav"> Empty </div>
 
-  <div class="test">
-    <p>
-      Welcome
-    </p>
-  </div>
-  <div class="test2">
-    <p>
-      My Projects
-    </p>
-  </div>
-<a href="portfolio.html">
-  <div class="test3">
-    <p>
-      My Portfolio
-    </p>
-  </div>
-</a>
-<script src="script.js" charset="utf-8"></script>
+<div class="">
+<a href=""></a>
+</div>
+
 </body>
 </html>
